# scriv

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  commands.go  crypto_test.go  go.mod  main.go  notes.go  notes_compat_test.go  notes_test.go
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  rust-clippy.yml
src/: crypto.rs  format.rs  lib.rs  main.rs  model.rs  notes.rs  storage.rs
tests/: crypto_tests.rs  format_tests.rs  lib_tests.rs  storage_tests.rs
