[package]
name = "jot"
version = "1.0.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
once_cell = "1.20"
pbkdf2 = "0.12"
rand = "0.8"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.13"
