[package]
name = "jot"
version = "1.0.0"
edition = "2024"
description = "Fast local CLI note manager with optional password encryption"
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/mooship/jot"
homepage = "https://github.com/mooship/jot"
documentation = "https://docs.rs/jot"
keywords = ["notes", "cli", "productivity", "local"]
categories = ["command-line-utilities"]

[dependencies]
aes-gcm = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
once_cell = "1.20"
pbkdf2 = "0.12"
rand = "0.8"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.13"
