[package]
name = "scriv"
version = "1.0.3"
edition = "2024"
description = "Fast local CLI note manager with optional password encryption"
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/mooship/scriv"
homepage = "https://github.com/mooship/scriv"
documentation = "https://docs.rs/scriv"
keywords = ["notes", "cli", "productivity", "local"]
categories = ["command-line-utilities"]

[dependencies]
aes-gcm = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
once_cell = "1.20"
pbkdf2 = "0.12"
rand = "0.10"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.13"
zeroize = "1"
